# sudoku_gen

./: meson.build
src/: main.c  sudoku.c
src/include/: rand.h  sudoku.h
